# worklog-analysis

./: .gitignore  Makefile  README.md  activity_reference.py  analyze_worklog.py  export_report.py  export_xlsx.py  pyproject.toml  requirements.txt  test_worklog.py  validation.py  worklog_lib.py
.github/workflows/: ci.yml
data/: README.md
data/templates/: README.md  worklog-export.example.csv
tests/fixtures/: worklog_sample.csv  worklog_worklog_sample.csv
